css/main.css
body {
  margin:0; padding:0;
  font-family: 'Barlow', sans-serif;
}

.container {
	width: 100%
}
#map {
  position:absolute;
  width:60%;
  height:100%;
}
.page-content {
	width: 60%;
	right: 0;
}
article.page-content {
	width: 100%;
}
.sidebar {
	height:100%;
	width:40%;
	background-color:#fff;
	position:fixed!important;
	z-index:1;
	right:0;
	overflow:auto;
}

.post-title{
	font-size: 14px;
  position: relative;
}

div#sidebar-content {
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 3em;
  padding-bottom: 3em;
}
div.page {
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 3em;
  padding-bottom: 3em;
}
div.wrapper {
	background-color: black;
	color: white;
}

p.post-header {
letter-spacing: 2px;
margin-bottom: .5rem;
font-size: 13px;
margin-top: 0;
font-family: 'Lato', sans-serif;
font-weight: 300;
font-style: italic;
border-width: 0 0 1px;
border-style: dotted;
line-height: 21px;
text-align: left;
z-index: 1 !important;
}

h1.post-title {
font-size: 18px;
margin-bottom: .3em;
}

p.byline {
	font-size: 15px;
	line-height: 15px;
    margin-top: .3em;
	margin-bottom: .5rem;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	font-style: italic;
}

img {
height: 200px;
}

article.post-article {
height: 75vh;
overflow-y: scroll;
z-index: 1 !important;
padding-bottom: 10px;
padding-top: 15px;
padding-right: 15px;
margin-right: -15px;
font-size: 16px;

}

p {
	display: block;
	-webkit-margin-before: 1em;
	-webkit-margin-after: 1em;
	-webkit-margin-start: 0px;
	-webkit-margin-end: 0px;
	text-align: justify;
  line-height: 22px;
}

img {
  display: block;
  margin: auto;
}

li {
  margin-bottom: 8px;
}

@media (max-width:768px) {
    #map {
        position: absolute;
        left: 0;
        height: 40vh;
        width: 100vw;
    }
    .sidebar {
        position: absolute;
        left: 0;
        height: 60vh;
        width: 100vw
    }

    body {
        overflow-y: hidden;
        overflow-x: hidden
    }
	article.post-article {
	height: 32vh;
	}
	div.wrapper {
		width: 100vw;
		height: 40vh;
		overflow: auto;
	}

    #map {
        top: 0
    }

    .sidebar {
        top: 40vh
    }

    .sidebar .sidebar {
        height: 50vh !important;
        width: 100vw
    }
    

}

@media (min-width:768px) and (max-width:1100px) {
    #map {
        top: 0;
        height: 100vh;
        width: 50vw;
    }

    #map {
        left: 0
    }

    .sidebar {
    	width: 50vw;
        position: absolute;
        right: 0;
    }
    div.wrapper {
		top: 0;
        width: 50vw;
        height: 100vh;
		overflow: auto;
	}
}

@media (min-width:1100px) {
    .sidebar, #map {
        position: absolute;
        top: 0;
        height: 100vh;
    }

    body {
        overflow-y: hidden;
        overflow-x: hidden
    }

    #map {
        left: 0;
        width: 55vw;
    }

    .sidebar {
        width: 45vw;
        right: 0;
    }
    div.wrapper {
		left: 0;
        width: 55vw;
        height: 100vh;
		overflow: auto;
	}
}

/*style figure captions*/
.caption {
  font-family: 'Barlow', sans-serif;
  font-size: 14px;
  font-style: italic;
  text-align: center;
  color: #5a5a5a;
  padding: 0px 10px;
}

/*style bibliography*/
.bibliography {
  list-style-type: none;
  text-indent: -1rem;
  font-size: 14px;
  padding-left: 20px;
  font-family: 'Lato', sans-serif;
  font-weight: 300;
}

img.legend {
	height: 24px;
	padding: 0px;
	vertical-align: middle;
}
img.article-marker {
	height: 42px;
	padding: 0px;
  align:right;
  cursor: pointer;
  display: inline;
}
.leaflet-popup-content-wrapper, .leaflet-popup-tip {
  font-family: "Barlow", serif;
  font-size: 14px;
}

label.leaflet-panel-layers-title {
  font-family: "Barlow", sans-serif;
  text-transform: uppercase;
}

